add `newFeed` endpoints
